# f1laps-telemetry

./: .gitignore  CHANGELOG.md  LICENSE  README.md  app.py  config.py  f1laps_configuration.txt  f1laps_telemetry_logs.txt  pat.py  race.py  requirements.txt  setup.cfg  telemetry_dump_test1_lap10.txt  telemetry_dump_test1_lap3.txt  telemetry_dump_test1_lap4.txt  telemetry_dump_test1_lap5.txt  telemetry_dump_test1_lap6.txt  telemetry_dump_test1_lap7.txt  telemetry_dump_test1_lap8.txt  telemetry_dump_test1_lap9.txt  test-telemetry-dump-1.txt
.github/workflows/: python-test.yml
apps/: README.md
f1laps_telemetry_2020/: f1laps.py  packets.py  receiver.py  session.py
gui/: base_classes.py  styles.py  styles.qss  window.py  workers.py
lib/: file_handler.py  logger.py
lib/packets/: representation.py
receiver/: api_base.py  f1laps.py  game_version.py  helpers.py  lap_base.py  lap_telemetry_base.py  packets.py  penalty_base.py  receiver.py  session.py  session_base.py  telemetry.py  telemetry_base.py
receiver/f12020/: api.py  packets.py  processor.py  session.py  telemetry.py
receiver/f12021/: api.py  packets.py  penalty.py  processor.py  session.py  telemetry.py  types.py
receiver/f12022/: api.py  lap.py  penalty.py  processor.py  session.py  telemetry.py  types.py
tests/: test_api.py  test_f1laps.py  test_file_handler.py  test_game_version.py  test_packets.py  test_penalty.py  test_session.py  test_telemetry.py
tests/tests_f12020/: test_f1laps.py  test_packets.py  test_session.py  test_telemetry.py
tests/tests_f12021/: test_processor.py  test_session.py  (+1 more)
(+63 files in other folders)
