[metadata]
name = f1laps-telemetry-2020
version = 0.1.5
author = F1Laps
author_email = contact@f1laps.com
description = This package lets you sync F1 game data into F1Laps automatically. It receives telemetry packets via the UDP protocol in your local network.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/f1laps/f1laps-telemetry
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6